--- a/app/templates/brindexxx.html
+++ b/app/templates/brindexxx.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Untitled</title><style type="text/css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Imprimir Brinde</title><style type="text/css">
 p { margin-top: 0px;margin-bottom: 0px;line-height: 1.15; }
 body { font-family: 'Verdana';font-style: Normal;font-weight: normal;font-size: 16px; }
 .Normal { telerik-style-type: paragraph;telerik-style-name: Normal;border-collapse: collapse; }
