--- a/app/templates/homex.html
+++ b/app/templates/homex.html
@@ -2,7 +2,7 @@
     <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>Controle de Brindes</title>
+        <title>Login</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
