--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -62,7 +62,7 @@
                             <td>{{dbs.Sala}}</td>
                             <td class="text-center">
                                 <a href="/view/{{dbs.id}}/" class="btn btn-dark" title="Visualizar Cadastro do Cliente"><i class='fas fa-eye'></i>  Visualizar</a>
-                                <a href="/brinde/{{dbs.id}}/" class="btn btn-success" title="Imprimir Brinde"><i class='fas fa-print'></i>  Imprimir</a>
+                                <a href="/brinde/{{dbs.id}}/" target="_blank" class="btn btn-success" title="Imprimir Brinde"><i class='fas fa-print'></i>  Imprimir</a>
                                 <!--<a href="/edit/{{dbs.id}}/" class="btn btn-primary" title="Editar Cadastro do Cliente"><i class='fas fa-user-edit'></i>   Editar</a>
                                 <a href="/delete/{{dbs.id}}/" class="btn btn-danger btnDel" title="Deletar Cadastro do Cliente"><i class='far fa-trash-alt'></i>   Deletar</a>-->
                             </td>
