--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -43,7 +43,7 @@
               <p class="card-text"><strong>Nome do Cliente:</strong> {{db.Nome}}<br>
                   <strong>Sala de Atendimento:</strong> {{db.Sala}}<br>
                   <strong>Brinde:</strong> {{db.Brinde}}</p>
-            <a href="/brinde/{{db.id}}/" class="btn btn-success" title="Imprimir Brinde"><i class='fas fa-print'></i>  Imprimir</a>
+            <a href="/brinde/{{db.id}}/" target="_blank" class="btn btn-success" title="Imprimir Brinde"><i class='fas fa-print'></i>  Imprimir</a>
             <a href="/edit/{{db.id}}/" class="btn btn-primary" title="Editar Cadastro do Cliente"><i class='fas fa-user-edit'></i>   Editar</a>
             <a href="/delete/{{db.id}}/" class="btn btn-danger btnDel" title="Deletar Cadastro do Cliente"><i class='far fa-trash-alt'></i>   Deletar</a>
           </div>
