--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -3,7 +3,7 @@
     <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>Controle de Brindes</title>
+        <title>Cadastro de Cliente</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
         <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
