Primeiro Upload DB

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -57,7 +57,7 @@
        </div>
     </div>
 
-
+<!--
 
     <div class="container">
         <div class="row">
@@ -66,11 +66,11 @@
                     <thead>
                     <tr>
                         <th scope="col">ID</th>
-                        <th scope="col"><!--<i class='fas fa-user-alt'></i>-->  Nome</th>
-                        <th scope="col"><!--<i class='far fa-calendar-alt'></i>-->   Data</th>
-                        <th scope="col"><!--<i class='fas fa-gift'></i>-->  Brinde</th>
-                        <th scope="col"><!--<i class='fas fa-home'></i>-->    Sala</th>
-                        <th class="col text-center"><!--<i class="fa fa-gear fa-spin" style="font-size:24px"></i>-->    Opções</th>
+                        <th scope="col"> Nome</th>
+                        <th scope="col">   Data</th>
+                        <th scope="col"> Brinde</th>
+                        <th scope="col"> Sala</th>
+                        <th class="col text-center">   Opções</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -98,7 +98,7 @@
             </div>
         </div>
     </div>
-
+-->
 <!--
     <div class="pagination text-center pt-4 pb-4">
         {% if db.has_previous %}
@@ -109,7 +109,7 @@
             <a href="?page={{ db.next_page_number }}"> > </a>
         {% endif %}
     </div>-->
-
+<!--
      <div class="center">
   <div class="pagination">
    {% if db.has_previous %}
@@ -121,13 +121,13 @@
   <a href="?page=4">4</a>
   <a href="?page=5">5</a>
   <a href="?page=6">6</a>
-  <!--<a href="#" class="active">2</a>-->
+  ##<a href="#" class="active">2</a>
   {% if db.has_next %}
             <a href="?page={{ db.next_page_number }}">&raquo;</a>
   {% endif %}
   </div>
 </div>
-
+-->
 
       <div class="container">
        <div class="table-responsive text-center pt-4 pb-4">
