--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" integrity="sha512-bNhgnJHThy7V94c1sEuc7sK91Wo8ZUaJZYZ6wZK6E3q6D50pPzJMrKj+U1I9Xj8fn+vgIS+sZY+hRlBbLHTJ+Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-         <style>
+        <!-- <style>
             .center {
               text-align: center;
             }
@@ -27,7 +27,7 @@
             }
 
 
-            </style>
+            </style>-->
      </head>
      <body>
 
@@ -83,11 +83,11 @@
                             <td>{{dbs.Brinde}}</td>
                             <td>{{dbs.Sala}}</td>
                             <td class="text-center">
-                                <a href="/view/{{dbs.id}}/" class="btn btn-dark" title="Visualizar Cadastro do Cliente"><!--<i class='fas fa-eye'></i>-->  Visualizar</a>
-                                <a href="/brinde/{{dbs.id}}/" class="btn btn-success" title="Imprimir Brinde" target="_blank"><!--<i class='fas fa-print'></i>-->Imprimir</a>
+                                <a href="/view/{{dbs.id}}/" class="btn btn-dark" title="Visualizar Cadastro do Cliente">  Visualizar</a>
+                                <a href="/brinde/{{dbs.id}}/" class="btn btn-success" title="Imprimir Brinde" target="_blank">Imprimir</a>
 
-                                <!--<a href="/edit/{{dbs.id}}/" class="btn btn-primary" title="Editar Cadastro do Cliente"><i class='fas fa-user-edit'></i>   Editar</a>
-                                <a href="/delete/{{dbs.id}}/" class="btn btn-danger btnDel" title="Deletar Cadastro do Cliente"><i class='far fa-trash-alt'></i>   Deletar</a>-->
+                                <a href="/edit/{{dbs.id}}/" class="btn btn-primary" title="Editar Cadastro do Cliente"><i class='fas fa-user-edit'></i>   Editar</a>
+                                <a href="/delete/{{dbs.id}}/" class="btn btn-danger btnDel" title="Deletar Cadastro do Cliente"><i class='far fa-trash-alt'></i>   Deletar</a>
                             </td>
                         </tr>
 
@@ -99,16 +99,7 @@
         </div>
     </div>
 -->
-<!--
-    <div class="pagination text-center pt-4 pb-4">
-        {% if db.has_previous %}
-            <a href="?page={{ db.previous_page_number }}"> < </a>
-        {% endif %}
-        {{db.number }}
-        {% if db.has_next %}
-            <a href="?page={{ db.next_page_number }}"> > </a>
-        {% endif %}
-    </div>-->
+
 <!--
      <div class="center">
   <div class="pagination">
