--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -73,32 +73,24 @@
             <div class="table-responsive">
                 <table class="table table-striped">
                     <thead>
-                    <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col"> Nome</th>
-                        <th scope="col">   Data</th>
-                        <th scope="col"> Brinde</th>
-                        <th scope="col"> Sala</th>
-                        <th class="col text-center">   Opções</th>
-                    </tr>
-                    </thead>
                     <tbody>
-
+                    {% for dbs in db %}
 
                         <tr>
-                            <th>{{db.id}}</th>
-                            <td>{{db.Nome}}</td>
-                            <td>{{db.tempo_formatado}}</td>
-                            <td>{{db.Brinde}}</td>
-                            <td>{{db.Sala}}</td>
+                            <th>{{dbs.id}}</th>
+                            <td>{{dbs.Nome}}</td>
+                            <td>{{dbs.tempo_formatado}}</td>
+                            <td>{{dbs.Brinde}}</td>
+                            <td>{{dbs.Sala}}</td>
                             <td class="text-center">
-                                <a href="/view/{{db.id}}/" class="btn btn-dark" title="Visualizar Cadastro do Cliente">  Visualizar</a>
-                                <a href="/brinde/{{db.id}}/" class="btn btn-success" title="Imprimir Brinde" target="_blank">Imprimir</a>
+                                <a href="/view/{{dbs.id}}/" class="btn btn-dark" title="Visualizar Cadastro do Cliente">  Visualizar</a>
+                                <a href="/brinde/{{dbs.id}}/" class="btn btn-success" title="Imprimir Brinde" target="_blank">Imprimir</a>
+
+                                <a href="/edit/{{dbs.id}}/" class="btn btn-primary" title="Editar Cadastro do Cliente"><i class='fas fa-user-edit'></i>   Editar</a>
+                                <a href="/delete/{{dbs.id}}/" class="btn btn-danger btnDel" title="Deletar Cadastro do Cliente"><i class='far fa-trash-alt'></i>   Deletar</a>
                             </td>
                         </tr>
-
-
-
+                    {% endfor %}
                     </tbody>
                 </table>
             </div>
