Primeiro Upload DB2

--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -20,7 +20,7 @@
         </div>
         <div class="col-md-4"></div>
         <div class="col-md-1 text-center pt-4">
-            <a class="btn btn-danger" href="/index" role="button">Voltar</a>
+            <a class="btn btn-danger" href="/" role="button">Voltar</a>
         </div>
     </div>
 </div>
@@ -53,7 +53,7 @@
 
 
             <div class="text-end">
-                <button id="Cancelar" name="Cancelar" class="btn btn-danger mt-4" type="Reset" onclick="window.location.href = '/index'">Cancelar</button>
+                <button id="Cancelar" name="Cancelar" class="btn btn-danger mt-4" type="Reset" onclick="window.location.href = '/'">Cancelar</button>
                 <input type="submit" class="btn btn-success mt-4" value="Salvar">
             </div>
 
