--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,7 +41,7 @@
      <div class="container bg-primary col-md-12 mt-4 pb-2">
       <div class="row">
         <div class="col-md-6 text-start pt-3">
-         <a class="navbar-brand text-white " href="/index"><h1><!--<i class='fas fa-gift'></i>-->  Controle de Brindes  </h1></a>
+         <a class="navbar-brand text-white " href="/"><h1><!--<i class='fas fa-gift'></i>-->  Controle de Brindes  </h1></a>
         </div>
 
 
@@ -86,8 +86,8 @@
                                 <a href="/view/{{dbs.id}}/" class="btn btn-dark" title="Visualizar Cadastro do Cliente">  Visualizar</a>
                                 <a href="/brinde/{{dbs.id}}/" class="btn btn-success" title="Imprimir Brinde" target="_blank">Imprimir</a>
 
-                                <a href="/edit/{{dbs.id}}/" class="btn btn-primary" title="Editar Cadastro do Cliente"><i class='fas fa-user-edit'></i>   Editar</a>
-                                <a href="/delete/{{dbs.id}}/" class="btn btn-danger btnDel" title="Deletar Cadastro do Cliente"><i class='far fa-trash-alt'></i>   Deletar</a>
+                                <a href="/edit/{{dbs.id}}/" class="btn btn-primary" title="Editar Cadastro do Cliente">  Editar</a>
+                                <a href="/delete/{{dbs.id}}/" class="btn btn-danger btnDel" title="Deletar Cadastro do Cliente">   Deletar</a>
                             </td>
                         </tr>
                     {% endfor %}
