--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -16,14 +16,14 @@
 
         </div>
 
-      <div class="col-md-2 text-center mt-4"><a class="navbar-brand text-white " href="/"><h1><i class='fas fa-user-alt'></i>   Cliente  </h1></a>
+      <div class="col-md-2 text-center mt-4"><a class="navbar-brand text-white " href="/"><h1>   Cliente  </h1></a>
       </div>
 
       <div class="col-md-4 ">
 
       </div>
       <div class="col-md-1 text-center pt-4">
-          <a class="btn btn-danger" href="/index" role="button">Voltar</a>
+          <a class="btn btn-danger" href="/" role="button">Voltar</a>
         </div>
       </div>
 
