--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -86,8 +86,8 @@
                                 <a href="/view/{{dbs.id}}/" class="btn btn-dark" title="Visualizar Cadastro do Cliente">  Visualizar</a>
                                 <a href="/brinde/{{dbs.id}}/" class="btn btn-success" title="Imprimir Brinde" target="_blank">Imprimir</a>
 
-                                <a href="/edit/{{dbs.id}}/" class="btn btn-primary" title="Editar Cadastro do Cliente">  Editar</a>
-                                <a href="/delete/{{dbs.id}}/" class="btn btn-danger btnDel" title="Deletar Cadastro do Cliente">   Deletar</a>
+                                <!--<a href="/edit/{{dbs.id}}/" class="btn btn-primary" title="Editar Cadastro do Cliente">  Editar</a>
+                                <a href="/delete/{{dbs.id}}/" class="btn btn-danger btnDel" title="Deletar Cadastro do Cliente">   Deletar</a>-->
                             </td>
                         </tr>
                     {% endfor %}
