Primeiro Upload DB2

--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -21,7 +21,7 @@
         </div>
         <div class="col-md-4"></div>
         <div class="col-md-1 text-center pt-4">
-            <a class="btn btn-danger" href="/index" role="button">Voltar</a>
+            <a class="btn btn-danger" href="/" role="button">Voltar</a>
         </div>
     </div>
 </div>
