--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -72,7 +72,14 @@
         <div class="row">
             <div class="table-responsive">
                 <table class="table table-striped">
-                    <thead>
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">Nome</th>
+                        <th scope="col">Data</th>
+                        <th scope="col">Brinde</th>
+                        <th scope="col">Sala</th>
+                        <th class="col text-center"><i class="fa fa-gear fa-spin" style="font-size:24px"></i>   Opções</th>
+                    </tr>
                     <tbody>
                     {% for dbs in db %}
 
