--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -39,7 +39,7 @@
      <body>
 
      <div class="container bg-primary col-md-12 mt-4 pb-2">
-      <!--<div class="text-end text-white"><a href="/admins/" class="text-white">Área Administrativa</a></div>-->
+      <div class="text-end text-white"><a href="/admins/" class="text-white">Área Administrativa</a></div>
       <div class="row">
         <div class="col-md-6 text-start pt-3">
          <a class="navbar-brand text-white " href="/index/"><h1><!--<i class='fas fa-gift'></i>-->  Controle de Brindes  </h1></a>
